--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@fontsource/inter": "^5.2.6",
     "@heroui/button": "^2.2.24",
     "@heroui/code": "^2.2.18",
     "@heroui/dropdown": "^2.3.24",
@@ -26,6 +27,8 @@
     "@react-types/shared": "3.31.0",
     "@tailwindcss/postcss": "4.1.11",
     "@tailwindcss/vite": "4.1.11",
+    "@tanstack/react-query": "^5.85.5",
+    "axios": "^1.11.0",
     "clsx": "2.1.1",
     "framer-motion": "11.18.2",
     "react": "18.3.1",
