--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@heroui/snippet": "^2.2.25",
     "@heroui/switch": "^2.2.22",
     "@heroui/system": "^2.4.20",
+    "@heroui/tabs": "^2.2.21",
     "@heroui/theme": "^2.4.20",
     "@heroui/use-theme": "2.1.10",
     "@react-aria/visually-hidden": "3.8.26",
