--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@heroui/kbd": "^2.2.19",
     "@heroui/link": "^2.2.21",
     "@heroui/navbar": "^2.2.22",
+    "@heroui/skeleton": "^2.2.15",
     "@heroui/snippet": "^2.2.25",
     "@heroui/switch": "^2.2.22",
     "@heroui/system": "^2.4.20",
@@ -32,6 +33,7 @@
     "axios": "^1.11.0",
     "clsx": "2.1.1",
     "framer-motion": "11.18.2",
+    "moment": "^2.30.1",
     "react": "18.3.1",
     "react-dom": "18.3.1",
     "react-router-dom": "6.23.0",
