--- a/package.json
+++ b/package.json
@@ -38,7 +38,8 @@
     "react-dom": "18.3.1",
     "react-router-dom": "6.23.0",
     "tailwind-variants": "2.0.1",
-    "tailwindcss": "4.1.11"
+    "tailwindcss": "4.1.11",
+    "use-debounce": "^10.0.5"
   },
   "devDependencies": {
     "@eslint/compat": "1.2.8",
