--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "@heroui/system": "^2.4.20",
     "@heroui/tabs": "^2.2.21",
     "@heroui/theme": "^2.4.20",
+    "@heroui/toast": "^2.0.14",
     "@heroui/tooltip": "^2.2.21",
     "@heroui/use-theme": "2.1.10",
     "@react-aria/visually-hidden": "3.8.26",
